--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,30 @@
 name: name
-description: description
-version: '0.0.1-dev'
-author: Plague Fox <Plugfox@gmail.com>
+description: >
+  description
+version: '0.0.1+1-pre-dev'
+author: Plague Fox <PlugFox@gmail.com>
 homepage: https://github.com/plugfox
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 environment:
-  sdk: '>=2.8.0 <3.0.0'
+  sdk: '>=2.8.1 <3.0.0'
 
 dependencies:
   meta: '>=1.0.0 <2.0.0'
+  #l: '>=1.1.1 <2.0.0'
+  #dio: '>=3.0.9 <4.0.0'
+  #json_annotation: '>=3.0.1 <4.0.0'
 
 dev_dependencies:
   build_runner: '>=1.8.1 <2.0.0'
   build_test: '>=1.0.0 <2.0.0'
   test: '>=1.14.2 <2.0.0'
-  grinder: '>=0.8.4 <1.0.0'
-  path: '>=1.7.0 <2.0.0'
+  #grinder: '>=0.8.4 <1.0.0'
+  #path: '>=1.7.0 <2.0.0'
+  #multiline: '>=1.0.1 <2.0.0'
+  #pub_semver: '>=1.4.4 <2.0.0'
+  #tuneup: '>=0.3.6+1 <1.0.0'
+  #json_serializable: '>=3.3.0 <4.0.0'
 
 dependency_overrides:
